--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,20 @@
-- name: FTP Deploy
+on:
+  push:
+    branches:
+      - main
+
+
+name: FTP Deploy
   # You may pin to the exact commit or the version.
   # uses: SamKirkland/FTP-Deploy-Action@8a24039354ee91000cb948cb4a1dbdf1a1b94a3c
   uses: SamKirkland/FTP-Deploy-Action@v4.3.4
   with:
     # ftp server
-    server: 
+    server: ${{ secrets.ftp_server}}
     # ftp username
-    username: 
+    username: ${{ secrets.ftp_username}}
     # ftp password
-    password: 
+    password: ${{ secrets.ftp_password}}
     # Server port to connect to (read your web hosts docs)
     port: # optional
     # protocol to deploy with - ftp, ftps, or ftps-legacy
